[fix] Dao: Fix update ActivityCalendar